<resources>
    <string name="app_name">American Football Scoreboard</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="resume">continue</string>
    <string name="quarter">quarter</string>3
    <string name="quarter_value">1</string>
    <string name="team_a_hint">Team A</string>
    <string name="team_b_hint">Team B</string>
    <string name="initial_score">0</string>
    <string name="Lost_Time">Time Lost</string>
    <string name="resetScore">Reset Score</string>
    <string name="resetTimer">Reset Timer</string>
    <string name="touchdown">touchdown</string>
    <string name="field_goal">field goal</string>
    <string name="one_extra_point">+1 extra point</string>
    <string name="two_extra_point">+2 extra points</string>
    <string name="safety">safety</string>
</resources>