<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/pause"
                    style="@style/ChronometerButtons"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/pause_button"
                    android:paddingTop="4dp"
                    android:text="@string/pause" />

                <Button
                    android:id="@+id/stop"
                    style="@style/ChronometerButtons"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/stop_button"
                    android:text="@string/stop" />
            </LinearLayout>

            <Chronometer
                android:id="@+id/timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="#0e7630"
                android:textSize="50sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/resume"
                    style="@style/ChronometerButtons"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/resume_button"
                    android:text="@string/resume" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/period_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:text="@string/quarter"
                android:textAllCaps="true"
                android:textColor="#0057d9"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/quarter"
                android:layout_width="35dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/quarters"
                android:longClickable="true"
                android:text="@string/quarter_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#b8005c"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    style="@style/TeamName"
                    android:hint="@string/team_a_hint" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/TeamScore" />

                <Button
                    android:id="@+id/sexForTeamA"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/touchdown" />

                <Button
                    android:id="@+id/threeForTeamA"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/field_goal" />

                <Button
                    android:id="@+id/oneExtraForTeamA"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/one_extra_point" />

                <Button
                    android:id="@+id/twoExtraForTeamA"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/two_extra_point" />

                <Button
                    android:id="@+id/twoForTeamA"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/safety" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="#808080" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    style="@style/TeamName"
                    android:hint="@string/team_b_hint" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/TeamScore" />

                <Button
                    android:id="@+id/sexForTeamB"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/touchdown" />

                <Button
                    android:id="@+id/threeForTeamB"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/field_goal" />

                <Button
                    android:id="@+id/oneExtraForTeamB"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/one_extra_point" />

                <Button
                    android:id="@+id/twoExtraForTeamB"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/two_extra_point" />

                <Button
                    android:id="@+id/twoForTeamB"
                    style="@style/ScorePoints"
                    android:background="@drawable/points_button_afoot"
                    android:text="@string/safety" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_vertical|center_horizontal|center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/overtime"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/lost_time"
                android:padding="4dp"
                android:text="@string/Lost_Time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/resetScore"
                    style="@style/ResetButton"
                    android:background="@drawable/reset_button"
                    android:text="@string/resetScore" />

                <Button
                    android:id="@+id/reset_timer"
                    style="@style/ResetButton"
                    android:background="@drawable/reset_button"
                    android:text="@string/resetTimer" />

            </LinearLayout>

            <Chronometer
                android:id="@+id/timer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#0e7630"
                android:textSize="50sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


